Improved DB. Added cloudfront hosts